<resources>
    <string name="app_name">TimeTableGenerator</string>
    <string name="select_date">Select Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_schedule_item">Add Schedule Item</string>
    <string name="additem">AddItem</string>
    <string name="enter_description">Enter Description</string>
    <string name="item_day">DAY</string>
    <string name="item_time">0:00 – 0:00</string>
    <string name="item_content">some words</string>
    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>