<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".fragments.AddFragment">

    <EditText
        android:id="@+id/textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:hint="@string/enter_description"
        android:minHeight="48dp"
        android:inputType="text" />
    <Spinner
        android:id="@+id/datespinner"
        android:layout_below="@+id/textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overlapAnchor="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/select_date"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/startTimeButton"
        android:layout_below="@id/datespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/start_time"/>

    <Button
        android:id="@+id/endTimeButton"
        android:layout_below="@id/startTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/end_time" />

    <SeekBar
        android:id="@+id/setColourRed"
        android:layout_below="@+id/endTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/SeekBarRed"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255" />
    <SeekBar
        android:id="@+id/setColourGreen"
        android:layout_below="@+id/setColourRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/SeekBarGreen"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255" />
    <SeekBar
        android:id="@+id/setColourBlue"
        android:layout_below="@+id/setColourGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/SeekBarBlue"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255" />

    <View
        android:id="@+id/selectedColor"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/setColourBlue"
        android:background="@color/black"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/addTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedColor"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_schedule_item" />

</RelativeLayout>